--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@sswatson/jsxgraph-react-js": "^1.0.10",
+    "lodash.debounce": "^4.0.8",
     "plotly.js": "^2.3.1",
-    "react-plotly.js": "^2.5.1"
+    "react-plotly.js": "^2.5.1",
+    "react-router-dom": "^5.2.0"
   }
 }
