--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
     "add": "^2.0.6",
     "framer-motion": "^4",
     "math3d-component": "^1.4.34",
+    "plotly.js": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.5.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1",
