--- a/package.json
+++ b/package.json
@@ -7,10 +7,5 @@
   "scripts": {
     "start": "yarn --cwd ./dev-server start & yarn --cwd ./client start"
   },
-  "dependencies": {
-    "lodash.debounce": "^4.0.8",
-    "plotly.js": "^2.3.1",
-    "react-plotly.js": "^2.5.1",
-    "react-router-dom": "^5.2.0"
-  }
+  "dependencies": {}
 }
