--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,14 @@
     "@testing-library/user-event": "^12.1.10",
     "add": "^2.0.6",
     "framer-motion": "^4",
-    "math3d-component": "^1.4.34",
+    "math3d-component": "^1.5.0",
+    "mathjax-full": "^3.2.0",
+    "mathjax-react": "^1.0.6",
     "plotly.js": "^2.3.1",
     "react": "^17.0.2",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
+    "react-mathquill": "^1.0.1",
     "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
