Update header rules

--- a/client/public/netlify.toml
+++ b/client/public/netlify.toml
@@ -3,14 +3,26 @@
   [headers.values]
     Cache-Control = "public, max-age=31536000"
 [[headers]]
-  for = "*.css" # css files too
+  for = "*.css"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
 [[headers]]
-  for = "*.png" # png files too
+  for = "*.png"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
 [[headers]]
-  for = "*.gif" # gif files too
+  for = "*.gif"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+[[headers]]
+  for = "*.jpg"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+[[headers]]
+  for = "*.jpeg" # gif files too
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+[[headers]]
+  for = "*.svg" # gif files too
   [headers.values]
     Cache-Control = "public, max-age=31536000"
