--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.3",
+    "react-icons": "^4.2.0",
     "react-mathquill": "^1.0.1",
     "react-plotly.js": "^2.5.1",
     "react-router-dom": "^5.2.0",
