--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mathexpo",
   "version": "0.1.0",
+  "license": "MIT",
   "dependencies": {
     "@chakra-ui/react": "^1.6.6",
     "@emotion/react": "^11",
